Add empty indicators

--- a/index.html
+++ b/index.html
@@ -90,10 +90,18 @@
                 ondragover="handleDragOver(event)"
                 class="pending-list-tasks"
               ></ul>
+              <div id="empty-pending" class="empty-container">
+                <img src="./assets/images/Empty.gif" alt="" />
+                <h5>There is no pending task available</h5>
+              </div>
             </div>
             <div class="done-container">
               <h2 class="done-title">Done Tasks</h2>
               <ul id="done-list-tasks" class="done-list-tasks"></ul>
+              <div id="empty-completed" class="empty-container">
+                <img src="./assets/images/Empty.gif" alt="" />
+                <h5>There is no completed task available</h5>
+              </div>
             </div>
           </div>
         </div>
