Edit some styles

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico" />
     <title>Todo-list</title>
-    <link rel="stylesheet" href="/assets/styles/style.css" />
+    <link rel="stylesheet" href="./assets/styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,7 +35,9 @@
   <body>
     <section class="todolist-container">
       <div class="todolist-container-detail">
-        <h1 class="todolist-title">Hi! I'm To Do List 👋</h1>
+        <h1 class="todolist-title">
+          Hi! I'm To Do List <span class="wave">👋</span>
+        </h1>
         <h5 class="todolist-description">
           Let me help you with your schedule for
           <span id="today"></span>
@@ -122,6 +124,6 @@
         <p>@Powered by <strong>Giao bao'</strong> - 2023</p>
       </div>
     </section>
-    <script type="text/javascript" src="/index.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
