--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
 
       <div class="footer">
-        <p>@Powered by <strong>Giao bao'</strong> - 2023</p>
+        <p>@Powered by <strong>🐆 & 🐼</strong> - 2023</p>
       </div>
     </section>
     <script type="text/javascript" src="./index.js"></script>
